tests/neg-custom-args/captures/i19470.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i19470.scala:9:12 ----------------------------------------
9 |    List(foo(f())) // error
  |         ^^^^^^^^
  |         Found:    Inv[box IO^{f?}]
  |         Required: box Inv[box IO^?]^?
  |
  | longer explanation available when compiling with `-explain`
